# ya-runtime-http-auth

./: Cargo.toml  Makefile  README.md  dummy.rs  runtime-descriptor-template.json  test.bat
.github/workflows/: release.yml  release_arm.yml  rust.yml  rust_arm.yml
conf/: ya-runtime-basic-auth.json  ya-runtime-http-auth.json
crates/ya-http-proxy/: Cargo.toml
crates/ya-http-proxy-client/: Cargo.toml
crates/ya-http-proxy-client/examples/: ya-proxy-cli.rs
crates/ya-http-proxy-client/src/: api.rs  client.rs  deser.rs  error.rs  lib.rs  model.rs  web.rs
crates/ya-http-proxy-model/: Cargo.toml
crates/ya-http-proxy-model/src/: addr.rs  deser.rs  lib.rs  model.rs
crates/ya-http-proxy/src/: api.rs  bin.rs  conf.rs  error.rs  lib.rs  proxy.rs
crates/ya-http-proxy/src/api/: handler.rs
crates/ya-http-proxy/src/conf/: client.rs  common.rs  server.rs
crates/ya-http-proxy/src/proxy/: client.rs  handler.rs  server.rs  stream.rs
crates/ya-http-proxy/tests/: e2e.rs
crates/ya-http-proxy/tests/resources/: server.cert  server.key
python_proxy_test/: test_service.py
src/: command.rs  config.rs  lock.rs  main.rs  model.rs  proxy.rs
