[package]
name = "ya-runtime-http-auth"
description = "HTTP authentication runtime for exposing services on Golem Network"
version = "0.2.0"
authors = ["Golem Factory <contact@golem.network>"]
homepage = "https://github.com/golemfactory/ya-runtime-http-auth"
repository = "https://github.com/golemfactory/ya-runtime-http-auth"
edition = "2021"
license = "GPL-3.0"
readme = "README.md"

[package.metadata.deb]
assets = [
    ["target/x86_64-unknown-linux-musl/release/ya-http-proxy", "usr/lib/yagna/plugins/ya-runtime-http-auth/", "755"],
    ["target/x86_64-unknown-linux-musl/release/ya-runtime-http-auth", "usr/lib/yagna/plugins/ya-runtime-http-auth/", "755"],
]

[target.'cfg(target_family = "unix")'.dependencies]
nix = "0.23"

[dependencies]
#ya-runtime-sdk = { version = "0.4.0", features = ["macros"] }
ya-runtime-sdk = { git = "https://github.com/golemfactory/ya-runtime-sdk.git", rev = "85a88e5bd76fedd9ff9904952bc256856535e3cb", features = ["macros"]}
ya-http-proxy-client = { version = "0.2", path = "crates/ya-http-proxy-client" }
ya-http-proxy-model = { version = "0.2", path = "crates/ya-http-proxy-model" }

actix-rt = "2.7.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
derive_more = { version = "0.99", default-features = false, features = ["from"] }
dirs = "4.0"
futures = "0.3"
fs2 = "0.4"
http = "0.2"
is_executable = "1.0"
log = "0.4"
rand = "0.8"
regex = "1.5"
serde = { version = "^1.0", features = ["derive"] }
serde_default = "0.1"
serde_json = "1.0"
structopt = "0.3"
strum = "0.23"
thiserror = "1.0"
tokio = { version = "1.21", features = ["time"] }

[workspace]
members = [ "crates/*" ]

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic ="abort"

#[patch.crates-io]
#ya-runtime-api = { git = "https://github.com/golemfactory/yagna.git", rev = "2222cadeed58ecc44295092fcb0bc9ffba8a3722" }
#ya-runtime-sdk = { path= "/home/reqc/workspace/ya/ya-runtime-sdk/ya-runtime-sdk" }
