[package]
name = "ya-http-proxy-client"
version = "0.1.0"
edition = "2021"

[features]
default = []
client = []

[dependencies]
actix-http = {version = "1" }
anyhow = { version = "1" }
awc = { version = "1" }
chrono = { version = "0.4", features = ["serde"] }
http = { version = "0.2" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
log = { version ="0.4" }
thiserror = {version ="1.0"}
