[package]
name = "ya-http-proxy-model"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
http = { version = "0.2" }
serde = { version = "1", features = ["derive"] }
strum = { version = "0.23", features = ["derive"] }

[dev-dependencies]
serde_json = { version = "1" }
