[package]
name = "ya-http-proxy-model"
description = "HTTP authentication runtime and ya-http-proxy data model"
authors = ["Golem Factory <contact@golem.network>"]
homepage = "https://github.com/golemfactory/ya-runtime-http-auth"
repository = "https://github.com/golemfactory/ya-runtime-http-auth"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
http = { version = "0.2" }
serde = { version = "1", features = ["derive"] }
strum = { version = "0.23", features = ["derive"] }

[dev-dependencies]
serde_json = { version = "1" }
